# machine-learning-zoomcamp-homework

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
01-intro/: Introduction to numpy.ipynb  homework.ipynb  linalg.ipynb  pandas.ipynb
02-regression/: 02-car-price-prediction.ipynb  homework-corrected.ipynb  homework.ipynb
03-classification/: 03-churn-prediction.ipynb  homework.ipynb
04-evaluation/: 04-evaluation.ipynb  homework.ipynb
05-deployment/: customer.json  marketing.py  ping.py  predict.py  workshop-uv-fastapi.ipynb  workshop-uv-fastapi.ipynb.ipynb
05-deployment/homework/: Dockerfile  call_predict.py  homework.ipynb  predict_service.py  pyproject.toml
06-decision-trees/: 06-decision-trees.ipynb  homework.ipynb
08-deep-learning/: homework.ipynb  notebook.ipynb  pytorch_workshop.ipynb
09-serverless/homework/: Dockerfile  lambda_function.py  questions_1_to_4.py  test.py
09-serverless/keras/: lambda_function.py  test.ipynb  test.py
09-serverless/pytorch/: Dockerfile  lambda_function.py  publish.sh  test.py
09-serverless/sklearn/: Dockerfile  lambda_function.py  publish.sh  pyproject.toml  train.py
10-kubernetes/: app.py  pyproject.toml  test.py
10-kubernetes/homework/: deployment.yaml
10-kubernetes/homework/image_files/: q6_test.py
10-kubernetes/k8s/: deployment.yaml
