[project]
name = "machine-learning-zoomcamp-homework"
version = "0.1.0"
description = "This repository contains files created while following the Machine Learning Zoomcamp course hosted by DataTalksClub."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.4",
    "botocore[crt]>=1.42.4",
    "fastapi>=0.122.0",
    "keras-image-helper>=0.0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]
